--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   provider: ^6.1.2
+  google_generative_ai: ^0.4.3
 
 dev_dependencies:
   flutter_test:
